# BeanFlow

./: OOP_TREE.md  REPO_INIT.md  ROO_NOTE.md  main.py  pyproject.toml
old/: config.yaml  pyproject.toml
old/bf/: __init__.py  cli.py  project.py
old/bf/business/: __init__.py  base.py  fundraising.py  procurement.py  production.py  profit.py  sales.py
old/bf/core/: __init__.py  account.py  beangenerator.py  config.py  transaction.py
old/projects/demo_project/: env.yaml  main.bean
old/projects/sample/: env.yaml  main.bean
